--- a/packages/flipper-plugin/package.json
+++ b/packages/flipper-plugin/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://fbflipper.com/schemas/plugin-package/v2.json",
   "name": "flipper-plugin-react-native-xstate-inspect",
   "id": "xstate-inspect",
-  "version": "0.0.1",
+  "version": "0.1.3",
   "pluginType": "client",
   "main": "dist/bundle.js",
   "flipperBundlerEntry": "src/index.tsx",
@@ -25,7 +25,7 @@
   "scripts": {
     "lint": "flipper-pkg lint",
     "build": "flipper-pkg bundle",
-    "prepack": "flipper-pkg bundle",
+    "prepack": "yarn lint && flipper-pkg bundle",
     "watch": "flipper-pkg bundle --watch",
     "test": "jest --no-watchman"
   },
@@ -38,18 +38,19 @@
     "@babel/preset-typescript": "latest",
     "@testing-library/react": "latest",
     "@types/jest": "latest",
+    "@types/qs": "^6.9.7",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/ws": "^8.5.3",
-    "@xstate/inspect": "^0.7.0",
     "antd": "latest",
-    "flipper-pkg": "^0.149.0",
+    "flipper-pkg": "latest",
     "flipper-plugin": "latest",
     "jest": "latest",
     "typescript": "latest",
     "xstate": "^4.32.1"
   },
   "dependencies": {
+    "@xstate/inspect": "^0.7.0",
     "ws": "^8.2.2"
   }
 }
